compiler/testData/cli/jvm/enumEntriesForJavaNotEnabled.kt

@OptIn(ExperimentalStdlibApi::class)
fun box(): String {
    val entries = java.util.concurrent.TimeUnit.entries
    return "OK"
}
